Add comments and update readme.

--- a/analysis/image/Multi Objective Losses Analysis.ipynb
+++ b/analysis/image/Multi Objective Losses Analysis.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Multi Objective Losses Analysis\n",
+    "\n",
+    "This notebook contains the analysis for the multi objective loss experiments. First, import some libraries."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -11,6 +20,22 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "LOSSES_FILE = '/home/mitchell/multiObjectiveExperiments/all_losses.csv'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read in the dataset and show the first few rows. The dataset shows the following for each trial:\n",
+    "* **perf**: The estimated performance for the final genotype.\n",
+    "* **mcc**: The computed mcc loss for the final genotype\n",
+    "* **lambda**: The lambda value for the loss function. The loss function is computed as\n",
+    "\n",
+    "```\n",
+    "loss = (1.0 - |mcc(predictions, labels)|) + (lambda * performance(genotype))\n",
+    "```\n",
+    "\n",
+    "* **experiment**: The experiment number. 3 trials were performed for each lambda value."
    ]
   },
   {
@@ -113,6 +138,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Generate two plots:\n",
+    "* **Correctness as a function of lambda**\n",
+    "* **Performance as a function of lambda**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -171,6 +205,13 @@
     "    plt.show()\n",
     "    \n",
     "generate_plots(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that the correctness isn't really affected until lambda = 0.0001, while performance linearly decreases until that point. When lambda = 0.001, performance is the primary driver, and yields useless models. This shows that the model is responding to this parameter, and in an actual application, much care would need to be taken to set this parameter properly."
    ]
   }
  ],
